# golden-burger

./: .gitignore  AGENTS.md
cloud_run_proj/: README.md  main.py  pyproject.toml
daily-report/: .env.example  .gitignore  DAILY_REPORT_README.md  FILE_STRUCTURE.md  JENKINS_SETUP.md  Jenkinsfile  QUICK_START.md  README.md  SETUP_GUIDE.md  SLACK_APP_SETUP.md  SUPABASE_MIGRATION.md  daily_report.py  pyproject.toml  slack-app-manifest.json  slack-app-manifest.yaml  test_report.py
daily-report/src/polybot_reporter/: __init__.py  account_config.py  contracts.py  retry.py
daily-report/src/polybot_reporter/api/: __init__.py  data_api_client.py
daily-report/src/polybot_reporter/notifications/: __init__.py  slack_notifier.py
daily-report/src/polybot_reporter/storage/: __init__.py  evidence_store.py  supabase_writer.py
daily-report/tests/: test_account_config.py  test_account_contract.py  test_daily_report_flow.py  test_data_api_failures.py  test_deployment_files.py  test_evidence_store.py  test_portfolio_valuation.py  test_retry.py  test_slack_collector_contract.py  test_slack_notifier.py  test_supabase_writer.py
docs/: ab-retro-playbook.md  nectarine-max-positions-retro.md  new-strategy-playbook.md  (+3 more)
golden-banana/: .env.example  README.md  STRATEGY_ANALYSIS.md  config.yaml  main.py  pyproject.toml
golden-banana/.claude/: settings.local.json
golden-banana/docs/: polymarket-strategy-claude.md  prd.txt
golden-banana/src/polybot/: bot.py  config.py  main.py
golden-banana/src/polybot/api/: gamma_client.py
golden-banana/src/polybot/db/: models.py  repository.py
golden-banana/src/polybot/strategy/: __init__.py  filters.py  momentum.py  scanner.py  trader.py
golden-banana/src/polybot/utils/: retry.py
golden-banana/tests/: __init__.py  test_config_validation.py  test_cycle_gamma_sweep.py  test_lifecycle_mode.py  test_momentum.py
golden-elderberry/: AGENTS.md  README.md  STRATEGY.md  config.yaml  main.py  pyproject.toml
golden-elderberry/src/polybot/: __init__.py  bot.py  config.py  main.py
golden-elderberry/src/polybot/api/: clob_client.py  gamma_client.py  history_client.py
golden-elderberry/src/polybot/db/: models.py  repository.py
golden-elderberry/src/polybot/strategy/: __init__.py  scanner.py  signals.py  trader.py
golden-elderberry/src/polybot/utils/: retry.py
golden-elderberry/tests/: test_config.py  test_config_validation.py  test_db_logging.py  test_history_client.py  test_lifecycle_mode.py  test_signals.py  test_trader.py  test_window.py
golden-fig/: .env.example  .gitignore  AGENTS.md  README.md  STRATEGY.md  config.yaml  main.py  pyproject.toml
golden-fig/src/polybot/: __init__.py  bot.py  config.py  main.py
golden-fig/src/polybot/api/: clob_client.py  gamma_client.py  history_client.py
golden-fig/src/polybot/db/: models.py  repository.py
golden-fig/src/polybot/strategy/: __init__.py  filters.py  scanner.py  signals.py  trader.py
golden-fig/tests/: test_config.py  test_config_validation.py  test_db_logging.py  test_filters.py  test_history_client.py  test_lifecycle_mode.py  test_reconciliation_continuity.py  test_signals.py  test_trader.py  test_window.py
golden-honeydew/: AGENTS.md  README.md  STRATEGY.md  config.yaml  conftest.py  main.py  pyproject.toml
golden-honeydew/scripts/: test_api_key.py
golden-honeydew/src/polybot/: __init__.py  bot.py  config.py  main.py
golden-honeydew/src/polybot/api/: clob_client.py  gamma_client.py  history_client.py
golden-honeydew/src/polybot/db/: models.py  repository.py
golden-honeydew/src/polybot/strategy/: __init__.py  scanner.py  signals.py  trader.py
golden-honeydew/src/polybot/utils/: logger.py
golden-honeydew/tests/: test_config.py  test_config_validation.py  test_history_client.py  test_lifecycle_mode.py  test_market_catalog.py  test_retro_logging.py  test_signals.py  test_trader.py  test_window.py
golden-mango/: AGENTS.md  README.md  STRATEGY.md  config.yaml  pyproject.toml
golden-mango/src/polybot/: __init__.py  bot.py  config.py  main.py
golden-mango/src/polybot/api/: clob_client.py  gamma_client.py  history_client.py
golden-mango/src/polybot/db/: models.py  repository.py
golden-mango/src/polybot/strategy/: __init__.py  scanner.py  signals.py  trader.py
golden-mango/src/polybot/utils/: logger.py
golden-mango/tests/: test_config.py  test_config_validation.py  test_lifecycle_mode.py  test_signals.py  test_trader.py  test_window.py
golden-orange/: .env.example  AGENTS.md  README.md  STRATEGY.md  config.yaml  main.py  pyproject.toml
golden-orange/src/polybot/: __init__.py  bot.py  config.py  main.py
golden-orange/src/polybot/api/: gamma_client.py  history_client.py
golden-orange/src/polybot/db/: models.py  repository.py
golden-orange/src/polybot/strategy/: __init__.py  filters.py  scanner.py  signals.py  trader.py
golden-orange/src/polybot/utils/: logger.py
golden-orange/tests/: test_config.py  test_config_validation.py  test_history_client.py  test_lifecycle_mode.py  test_signals.py  test_trader.py  test_window.py
polybot-observability/: README.md  pyproject.toml
polybot-observability/src/polybot_observability/: __init__.py  cli.py  config_contract.py  execution_ledger.py  intent_probe.py  reconciliation_policy.py  retro_audit.py  run_audit.py  sqlite_maintenance.py
polybot-observability/tests/: test_cli.py  test_config_contract.py  test_execution_ledger.py  test_intent_probe.py  test_reconciliation_policy.py  test_retro_compact.py  test_run_audit.py  test_sqlite_maintenance.py
slack-data-collector/: .env.example  .gitignore  README.md  pyproject.toml
slack-data-collector/sql/: pb_algorithm_account_catalog_sync_v1.sql  pb_portfolio_history_v2.sql  pb_portfolio_history_v3.sql  pb_portfolio_schema.sql
slack-data-collector/src/slack_data_collector/: __init__.py  __main__.py  cli.py  client.py  collector.py  config.py  normalizer.py  portfolio.py  portfolio_sql.py  storage.py  time_range.py
slack-data-collector/tests/: test_client.py  test_collector.py  test_config.py  test_normalizer.py  test_portfolio.py  test_storage.py
(+314 files in other folders)
