[project]
name = "golden-elderberry"
version = "0.1.0"
description = "Polymarket automated trading bot - Panic Fade strategy (buy overreaction crashes of former favorites)"
requires-python = ">=3.11"
dependencies = [
    "polybot-observability",
    "py-clob-client-v2>=1.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "SQLAlchemy>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
polybot = "polybot.main:main"

[tool.uv.sources]
polybot-observability = { path = "../polybot-observability", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
