[project]
name = "golden-mango"
version = "0.1.0"
description = "Polymarket automated trading bot - Patience Premium strategy (annualized settlement-discount carry with momentum guard)"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client-v2>=1.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "SQLAlchemy>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
polybot = "polybot.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
