[project]
name = "golden-orange"
version = "0.1.0"
description = "Polymarket automated trading bot - Fear Spike Fade strategy (fades fear-driven tail-market spikes by buying NO after the spike stalls)"
requires-python = ">=3.11"
dependencies = [
    "polybot-observability",
    "py-clob-client-v2>=1.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "SQLAlchemy>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
polybot = "polybot.main:main"

[tool.uv.sources]
polybot-observability = { path = "../polybot-observability", editable = true }

# cherry에는 없던 build-system: 이것이 없으면 uv가 프로젝트를 virtual로 취급해
# src/polybot이 설치되지 않아 pytest import와 `uv run polybot`이 깨진다.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# uv virtual 프로젝트에서도 pytest가 polybot을 import할 수 있게 src를 추가
pythonpath = ["src"]
