[project]
name = "slack-data-collector"
version = "0.1.0"
description = "Collect and normalize Slack channel history for database ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
slack-data-collector = "slack_data_collector.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_data_collector"]
